redoing the logos

--- a/public/src/app-footer/app-footer.html
+++ b/public/src/app-footer/app-footer.html
@@ -9,7 +9,7 @@
                             <div class="logo__text">
                                 <!-- <span>Realty</span> -->
                                  <img src="/img/logo.png" width="250" class="img-responsive">
-                                <span>This is a placeholder for the logo</span>
+                                <span>A portal to sell your property quickly!</span>
                             </div>
                         </a>
 
@@ -18,7 +18,7 @@
                         </address>
 
                         <div class="f-20">0000-000000000</div>
-                        <div class="f-14 m-t-5">contact@cashforproperty.ae / info@cashforproperty.ae</div>
+                        <div class="f-14 m-t-5">info@cash4properties.ae</div>
 
                         <div class="f-20 m-t-20">
                             <a href="" class="m-r-10"><i class="zmdi zmdi-google"></i></a>
