--- a/public/src/contact/contact.html
+++ b/public/src/contact/contact.html
@@ -19,14 +19,14 @@
                                 <li class="rmd-contact-list__title"><i class="zmdi zmdi-home"></i>Dubai Office</li>
                                 <li><i class="zmdi zmdi-pin"></i>230 Mira 2 Dubailand, <br>560030</li>
                                 <li><i class="zmdi zmdi-phone"></i>000-000-0000</li>
-                                <li><i class="zmdi zmdi-email"></i>contact@realty.com</li>
+                                <li><i class="zmdi zmdi-email"></i>info@cash4properties.ae</li>
                             </ul>
 
                             <ul class="rmd-contact-list">
                                 <li class="rmd-contact-list__title"><i class="zmdi zmdi-home"></i>UK Office</li>
                                 <li><i class="zmdi zmdi-pin"></i>7094 Blah Blah Mountain View, <br>123</li>
                                 <li><i class="zmdi zmdi-phone"></i>000-000-0000</li>
-                                <li><i class="zmdi zmdi-email"></i>info@realty.com</li>
+                                <li><i class="zmdi zmdi-email"></i>info@cash4properties.ae</li>
                             </ul>
 
                             <div class="contact__social">
