--- a/public/src/home/home.html
+++ b/public/src/home/home.html
@@ -12,7 +12,7 @@
 
     <div id="maincontain">
         <section class="section submit-ticker">
-            <p>Are you looking to sell your valuable property? <img src="/img/logo.png" width="250" class="img-responsive">  is your destination!</p>
+            <p>Are you looking to sell your property? <img src="/img/logo.png" width="250" class="img-responsive">  is your destination!</p>
 
             <a route-href="route: submit">Sell your property now!</a>
         </section>
