--- a/public/src/contact/contact.html
+++ b/public/src/contact/contact.html
@@ -32,31 +32,31 @@
 
                     <div class="col-sm-6">
                         <form class="contact__form">
-                            <div class="form-group form-group--light form-group--float">
+                            <div class="form-group form-group--light form-group--float">Name
                                 <input type="text" class="form-control" value.bind="model.name">
-                                <label>Name</label>
+                                <!-- <label>Name</label> -->
                                 <i class="form-group__bar"></i>
                             </div>
-                            <div class="form-group form-group--light form-group--float">
-                                <input type="text" class="form-control" value.bind="model.email">
-                                <label>Email Address</label>
+                            <div class="form-group form-group--light form-group--float">Email Address
+                                <input type="email" class="form-control" value.bind="model.email">
+                                <!-- <label>Email Address</label> -->
                                 <i class="form-group__bar"></i>
                             </div>
-                            <div class="form-group form-group--light form-group--float">
+                            <div class="form-group form-group--light form-group--float">Contact Number
                                 <input type="text" class="form-control" value.bind="model.contactNo">
-                                <label>Contact Number</label>
+                                <!-- <label>Contact Number</label> -->
                                 <i class="form-group__bar"></i>
                             </div>
-                            <div class="form-group form-group--light form-group--float">
+                            <div class="form-group form-group--light form-group--float">Message
                                 <textarea class="form-control textarea-autoheight" value.bind="model.message"></textarea>
-                                <label>Message</label>
+                                <!-- <label>Message</label> -->
                                 <i class="form-group__bar"></i>
                             </div>
 
                             <small class="mdc-text-white-darker">By sending us your information, you agree to our Terms of Use &amp; Privacy Policy.</small>
 
                             <div class="m-t-30">
-                                <button type="submit" class="btn brn-sm btn-default btn-static">Send</button>
+                                <button type="submit" class="btn brn-sm btn-default btn-static" click.delegate="submit()">Send</button>
                             </div>
                         </form>
                     </div>
