finishing up on the query field

--- a/public/src/contact/contact.html
+++ b/public/src/contact/contact.html
@@ -56,7 +56,7 @@
                             <small class="mdc-text-white-darker">By sending us your information, you agree to our Terms of Use &amp; Privacy Policy.</small>
 
                             <div class="m-t-30">
-                                <button type="submit" class="btn brn-sm btn-default btn-static" click.delegate="submit()">Send</button>
+                                <button type="submit" class="btn brn-sm btn-default btn-static" click.delegate="submit()" disabled.bind="submitted">Send</button>
                             </div>
                         </form>
                     </div>
