--- a/public/src/faq/faq.html
+++ b/public/src/faq/faq.html
@@ -32,7 +32,9 @@
                             <h2>Does it matter if I am behind on my mortgage payments and face the risk of repossession?</h2>
                         </div>
                         <div class="card__body">
-                           No. Wherever possible, we will use our strong relationship with mortgage lenders to help with any situation you might have. If the property is about to be repossessed, we suggest you call us now and act sooner rather than later. 
+                            No. Wherever possible, we will use our strong relationship with mortgage lenders to help with any situation you might have.
+                            If the property is about to be repossessed, we suggest you call us now and act sooner rather
+                            than later.
                         </div>
                     </div>
 
@@ -41,7 +43,8 @@
                             <h2>How do I know if I am getting a fair price for my property?</h2>
                         </div>
                         <div class="card__body">
-                            Fair trade is at the core of Cash For Property. Time is also money and it must be factored in the transaction. Allow us to make an offer* and find out.
+                            Fair trade is at the core of Cash For Property. Time is also money and it must be factored in the transaction. Allow us to
+                            make an offer* and find out.
                         </div>
                     </div>
 
@@ -50,7 +53,8 @@
                             <h2>How do you calculate the value of my property?</h2>
                         </div>
                         <div class="card__body">
-                            We use our collective experience of 30 years and our extensive knowledge of local markets. We use our proprietary system that provides us with the most up-to-date data to help us to offer* you a fair price.
+                            We use our collective experience of 30 years and our extensive knowledge of local markets. We use our proprietary system
+                            that provides us with the most up-to-date data to help us to offer* you a fair price.
                         </div>
                     </div>
 
@@ -59,7 +63,9 @@
                             <h2>How long does the entire process take?</h2>
                         </div>
                         <div class="card__body">
-                            The average time to conclude the transaction is usually 2 – 3 weeks. In some cases, we have concluded the transaction in 3 days. Having said that, Cash For Property will work with you to complete the entire process within the timeline ideal to you. 
+                            The average time to conclude the transaction is usually 2 – 3 weeks. In some cases, we have concluded the transaction in
+                            3 days. Having said that, Cash For Property will work with you to complete the entire process
+                            within the timeline ideal to you.
                         </div>
                     </div>
                     <div class="card faq__item">
@@ -67,7 +73,7 @@
                             <h2>How quick will I get an offer* on my property?</h2>
                         </div>
                         <div class="card__body">
-                            Less than 24hrs. Submit your property on our portal or call us on Cash For Property for our offer*. 
+                            Less than 24hrs. Submit your property on our portal or call us on Cash For Property for our offer*.
                         </div>
                     </div>
                     <div class="card faq__item">
@@ -75,7 +81,7 @@
                             <h2>What type of properties do you buy?</h2>
                         </div>
                         <div class="card__body">
-                           Cash For Property buys the following types of property: Independent Villas, Townhouses and Apartments.
+                            Cash For Property buys the following types of property: Independent Villas, Townhouses and Apartments.
                         </div>
                     </div>
 
@@ -85,7 +91,7 @@
                             <h2>Which areas does Cash For Property cover?</h2>
                         </div>
                         <div class="card__body">
-                            All freehold and leasehold areas in the United Arab Emirates. 
+                            All freehold and leasehold areas in the United Arab Emirates.
                         </div>
                     </div>
 
@@ -102,33 +108,33 @@
                         </div>
 
                         <div class="card__body m-t-10">
-                            <div class="form-group form-group--float">
-                                <input type="text" class="form-control">
+                            <div class="form-group form-group--float">Name
+                                <input type="text" class="form-control" value.bind="model.name">
                                 <i class="form-group__bar"></i>
-                                <label>Name</label>
+                                <!-- <label></label> -->
                             </div>
-                            <div class="form-group form-group--float">
-                                <input type="text" class="form-control">
+                            <div class="form-group form-group--float">Email Address
+                                <input type="text" class="form-control" value.bind="model.email">
                                 <i class="form-group__bar"></i>
-                                <label>Email Address</label>
+                                <!-- <label>Email Address</label> -->
                             </div>
-                            <div class="form-group form-group--float">
-                                <input type="text" class="form-control">
+                            <div class="form-group form-group--float">Contact Number
+                                <input type="text" class="form-control" value.bind="model.contactNo">
                                 <i class="form-group__bar"></i>
-                                <label>Contact Number</label>
+                                <!-- <label>Contact Number</label> -->
                             </div>
-                            <div class="form-group form-group--float">
-                                <textarea class="form-control textarea-autoheight"></textarea>
+                            <div class="form-group form-group--float">Message
+                                <textarea class="form-control textarea-autoheight" value.bind="model.message"></textarea>
                                 <i class="form-group__bar"></i>
-                                <label>Message</label>
+                                <!-- <label>Message</label> -->
                             </div>
 
                             <small class="text-muted">By sending us your information, you agree our Terms of Use &amp; Privacy Policy.</small>
                         </div>
 
                         <div class="card__footer">
-                            <button class="btn btn-primary">Submit</button>
-                            <button class="btn btn-link">Reset</button>
+                            <button class="btn btn-primary" click.delegate="submit()" disabled.bind="submitted">Submit</button>
+                            <!-- <button class="btn btn-link">Reset</button> -->
                             <button class="btn btn-link visible-sm-inline visible-xs-inline" data-rmd-action="block-close" data-rmd-target="#write-to-us">Cancel</button>
                         </div>
                     </form>
