adding some form validation

--- a/public/src/submit/submit.html
+++ b/public/src/submit/submit.html
@@ -40,7 +40,7 @@
                                     <i class="form-group__bar"></i>
                                 </div>
 
-                                <div class="form-group form-group--float form-group--float-center">Contact Number
+                                <div class="form-group form-group--float form-group--float-center">Contact Number [xxx-xxxx-xxx]
                                     <input type="text" class="form-control text-center" value.bind="model.contact.contactNo">
                                     <i class="form-group__bar"></i>
                                 </div>
