adding final list of changes

--- a/public/src/submit/submit.html
+++ b/public/src/submit/submit.html
@@ -117,7 +117,8 @@
                                     <i class="form-group__bar"></i>
                                 </div>
 
-                                <div class="form-group form-group--float m-b-5">Description
+                                <div class="form-group form-group--float m-b-5">Description<br>
+                                    <small><i>For example: Pool included, well maintained garden etc.</i></small>
                                     <input type="text" class="form-control text-center textarea-autoheight" value.bind="model.information.description">
                                     <i class="form-group__bar"></i>
                                 </div>
