adding about us to the home page

--- a/public/src/home/home.html
+++ b/public/src/home/home.html
@@ -12,9 +12,33 @@
 
     <div id="maincontain">
         <section class="section submit-ticker">
-            <p>Are you looking to sell your property? <img src="/img/logo.png" width="250" class="img-responsive">  is your destination!</p>
+            <p>Are you looking to sell your property? <img src="/img/logo.png" width="250" class="img-responsive"> is your destination!</p>
 
             <a route-href="route: submit">Sell your property now!</a>
+        </section>
+        <section class="section info-box" style="background:#F3F3F3">
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-4 col-md-8">
+                        <div class="info-box__item">
+                            <h3>About Us</h3>
+                            <p>
+                                The idea for CA$H4PROPERTY was spawned at the beginning of 2017 by a group of investors who have been active in the Dubai
+                                real estate market for more than 10 years. CA$H4PROPERTY also has a highly experienced team
+                                who have their hand on the pulse of the Dubai real estate market. What separates us from
+                                the rest is we offer a simple and straight-forward avenue for anyone wishing to sell their
+                                property quickly. Get in touch with us to find out more.
+                            </p>
+                        </div>
+
+                    </div>
+                    <div class="col-sm-12 col-md-4">
+                        <div class="info-box__item">
+                            <img class="img-responsive" src="img/us.png" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
         <section class="section info-box">
             <div class="container">
@@ -28,12 +52,13 @@
                         <div class="info-box__item">
                             <h3>Your First Step to a Brighter Future With Us</h3>
                             <p>
-                                At Cash For Property, we understand that you can have a number of reasons to sell your property quickly. Be it
-                                to attain financial freedom or to invest in a new property, we are a Company you can rely
-                                on to achieve your goals in the quickest possible way. Being the pioneers in Dubai, we understand
-                                the ins and outs of the transactional process which can be cumbersome at times. Cash For Property does not rely on financial institutions – rather, we use our large cash reserve
-                                to buy properties. This gives us the ability to buy your property in the shortest period
-                                possible. If this is what you are looking for, <a route-href="route: submit">Sell Your Property Now</a>
+                                At Cash For Property, we understand that you can have a number of reasons to sell your property quickly. Be it to attain
+                                financial freedom or to invest in a new property, we are a Company you can rely on to achieve
+                                your goals in the quickest possible way. Being the pioneers in Dubai, we understand the ins
+                                and outs of the transactional process which can be cumbersome at times. Cash For Property
+                                does not rely on financial institutions – rather, we use our large cash reserve to buy properties.
+                                This gives us the ability to buy your property in the shortest period possible. If this is
+                                what you are looking for, <a route-href="route: submit">Sell Your Property Now</a>
                             </p>
                         </div>
                     </div>
@@ -90,15 +115,15 @@
                             <img class="img-responsive" src="img/nofees.png" alt="" height="300">
 
                             <h3>No Fees Whatsoever</h3>
-                            <p>Selling your property can be a costly affair. At Cash For Property, we understand this
-                                and that’s why, we will bear the cost of all the fees associated with the sale of your property.
+                            <p>Selling your property can be a costly affair. At Cash For Property, we understand this and that’s
+                                why, we will bear the cost of all the fees associated with the sale of your property.
                             </p>
                         </div>
                     </div>
 
                     <div class="col-sm-4">
                         <div class="info-box__item">
-                            <img class="img-responsive" src="img/OIHEI81.png" alt=""  height="300">
+                            <img class="img-responsive" src="img/OIHEI81.png" alt="" height="300">
 
                             <h3>Flexible Timeline</h3>
                             <p>The timetable for the transaction will be set according to your convenience and needs. This way,
@@ -111,9 +136,9 @@
                             <img class="img-responsive" src="img/OAI50P1.png" alt="" height="300">
 
                             <h3>Best Price to Time Ratio</h3>
-                            <p>Cash For Property understands that time is money too. This is factored in the price
-                                offered. Therefore, our offer will be the best in the market to sell your property in the
-                                shortest time. </p>
+                            <p>Cash For Property understands that time is money too. This is factored in the price offered.
+                                Therefore, our offer will be the best in the market to sell your property in the shortest
+                                time. </p>
                         </div>
                     </div>
                 </div>
@@ -283,15 +308,16 @@
             <div class="container">
                 <div class="row card-item">
                     <div class="col-sm-12 col-md-9">
-                        <h3 class="white-text">Cash For Property can complete this entire transaction within 2-3 weeks by paying you your
-                            final asking price of AED 800,000</h3>
+                        <h3 class="white-text">Cash For Property can complete this entire transaction within 2-3 weeks by paying you your final
+                            asking price of AED 800,000</h3>
                         <h3 class="white-text">A massive potential saving of AED 49,000 and 5 months’ worth of time!</h3>
                     </div>
                     <div class="col-sm-12 col-md-3">
-                         <img class="img-responsive" src="img/rich.png" alt="" width="300" height="300">
+                        <img class="img-responsive" src="img/rich.png" alt="" width="300" height="300">
                     </div>
                 </div>
             </div>
         </section>
-        <a class="btn brn-sm btn-default btn-static" style="position: fixed; bottom: 55%; right: 0px; border-radius:100px;padding: 3px;" route-href="route: submit"><img src="img/sellnow.png" class="img-responsive"></a>
+        <a class="btn brn-sm btn-default btn-static" style="position: fixed; bottom: 55%; right: 0px; border-radius:100px;padding: 3px;"
+            route-href="route: submit"><img src="img/sellnow.png" class="img-responsive"></a>
 </template>
