removing social media icons

--- a/public/src/app-footer/app-footer.html
+++ b/public/src/app-footer/app-footer.html
@@ -12,19 +12,7 @@
                                 <span>A portal to sell your property quickly!</span>
                             </div>
                         </a>
-
-                        <address class="m-t-20 m-b-20 f-14">
-                            #230, Mira 2, Dubailand
-                        </address>
-
-                        <div class="f-20">0000-000000000</div>
-                        <div class="f-14 m-t-5">info@cash4properties.ae</div>
-
-                        <div class="f-20 m-t-20">
-                            <a href="" class="m-r-10"><i class="zmdi zmdi-google"></i></a>
-                            <a href="" class="m-r-10"><i class="zmdi zmdi-facebook"></i></a>
-                            <a href=""><i class="zmdi zmdi-twitter"></i></a>
-                        </div>
+                        <div class="f-14 m-t-5">info@cashforproperty.ae</div>
                     </div>
                 </div>
                 <div class="col-sm-4 col-sm-offset-4">
