--- a/public/src/contact/contact.html
+++ b/public/src/contact/contact.html
@@ -12,26 +12,9 @@
                 </div>
 
                 <div class="contact__inner clearfix">
-                    <div class="col-sm-6">
-                        <div class="contact__info">
-                            <ul class="rmd-contact-list">
-                                <li class="rmd-contact-list__title"><i class="zmdi zmdi-home"></i>Dubai Office</li>
-                                <li><i class="zmdi zmdi-pin"></i> Building 4<br>Emaar Business Park</li>
-                                <li><i class="zmdi zmdi-phone"></i>000-000-0000</li>
-                                <li><i class="zmdi zmdi-email"></i>info@cash4properties.ae</li>
-                            </ul>
-
-                            <div class="contact__social">
-                                <a href="" class="zmdi zmdi-facebook mdc-bg-indigo-300"></a>
-                                <a href="" class="zmdi zmdi-twitter mdc-bg-cyan-300"></a>
-                                <a href="" class="zmdi zmdi-google mdc-bg-red-300"></a>
-                                <a href="" class="zmdi zmdi-instagram mdc-bg-blue-grey-400"></a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-sm-6">
-                        <form class="contact__form">
+         
+                    <div class="col-sm-12">
+                        <form class="contact__form" style="color: #fff;">
                             <div class="form-group form-group--light form-group--float">Name
                                 <input type="text" class="form-control" value.bind="model.name">
                                 <!-- <label>Name</label> -->
