adding google analytics tag

--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,17 @@
 <html>
 
 <head>
+    <!-- Global Site Tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-106564092-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments) };
+        gtag('js', new Date());
+
+        gtag('config', 'UA-106564092-1');
+
+    </script>
+
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -40,7 +51,7 @@
         AppState = {}
     </script>
     <script type="text/javascript" src="js/config.js"></script>
-     <script src="js/parallax/parallax.min.js"></script> 
+    <script src="js/parallax/parallax.min.js"></script>
     <!-- Start main application -->
     <script src="scripts/vendor-bundle.js" data-main="aurelia-bootstrapper"></script>
     <!-- End main application -->
