--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,18 @@
         gtag('js', new Date());
 
         gtag('config', 'UA-106564092-1');
+    </script>
 
+    <script>
+        (function (i, s, o, g, r, a, m) {
+        i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+            (i[r].q = i[r].q || []).push(arguments)
+        }, i[r].l = 1 * new Date(); a = s.createElement(o),
+            m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+
+        ga('create', 'UA-106564092-1', 'auto');
+        ga('send', 'pageview');
     </script>
 
     <meta charset="utf-8">
@@ -48,7 +59,7 @@
     <!-- End page loader -->
 
     <script type="text/javascript">
-        AppState = {}
+            AppState = {}
     </script>
     <script type="text/javascript" src="js/config.js"></script>
     <script src="js/parallax/parallax.min.js"></script>
