--- a/public/src/app-footer/app-footer.html
+++ b/public/src/app-footer/app-footer.html
@@ -12,7 +12,7 @@
                                 <span>A portal to sell your property quickly!</span>
                             </div>
                         </a>
-                        <div class="f-14 m-t-5">info@cashforproperty.ae</div>
+                        <div class="f-14 m-t-5">contact@cashforproperty.freshdesk.com</div>
                     </div>
                 </div>
                 <div class="col-sm-4 col-sm-offset-4">
