--- a/public/src/app-header/app-header.html
+++ b/public/src/app-header/app-header.html
@@ -4,7 +4,7 @@
         <div class="header__top">
             <div class="container">
                 <ul class="top-nav">
-                    <li class="pull-right hidden-xs"><span><i class="zmdi zmdi-email"></i>info@cashforproperty.ae</span></li>
+                    <li class="pull-right hidden-xs"><span><i class="zmdi zmdi-email"></i>contact@cashforproperty.freshdesk.com</span></li>
                     <li class="pull-right hidden-xs"><span><i class="zmdi zmdi-phone"></i><a route-href="route: contact" style="color: #fbfbfb"><b>Click Here for a Callback</b></a></span></li>
                     </a>
                 </ul>
