--- a/public/src/submit/submit.html
+++ b/public/src/submit/submit.html
@@ -87,9 +87,9 @@
                                 <div class="form-group">
                                     <div class="checkbox">
                                         <label>
-                                                <input type="checkbox" checked.bind="model.location.currentlyLiving">
+                                                <input type="checkbox" checked.bind="model.location.currentlyRented">
                                                 <i class="input-helper"></i>
-                                                I currently live here
+                                                Currently Rented
                                             </label>
                                     </div>
                                 </div>
