--- a/public/src/faq/faq.html
+++ b/public/src/faq/faq.html
@@ -33,7 +33,7 @@
                         </div>
                         <div class="card__body">
                             No. Wherever possible, we will use our strong relationship with mortgage lenders to help with any situation you might have.
-                            If the property is about to be repossessed, we suggest you call us now and act sooner rather
+                            If the property is about to be repossessed, we suggest you request for a call back now and act sooner rather
                             than later.
                         </div>
                     </div>
