--- a/public/src/submit/submit.html
+++ b/public/src/submit/submit.html
@@ -204,6 +204,10 @@
                                         <!-- Last Modified: ${file.lastModifiedDate} -->
                                     </li>
                                 </ul>
+                                <div class="form-group form-group--float form-group--float-center">Expected Price
+                                    <input type="text" class="form-control text-center" value.bind="model.information.expectedPrice">
+                                    <i class="form-group__bar"></i>
+                                </div>
                                  <div class="form-group">
                                     <div class="checkbox">
                                         <label>
