--- a/public/src/submit/submit.html
+++ b/public/src/submit/submit.html
@@ -42,7 +42,7 @@
                                     <div style="color:brown" show.bind="validation.contact.email">Please enter a valid email</div>
                                 </div>
 
-                                <div class="form-group form-group--float form-group--float-center">Contact Number [xxx-xxxx-xxx]
+                                <div class="form-group form-group--float form-group--float-center">Contact Number [+971XXXXXXXXX]
                                     <input type="text" class="form-control text-center" value.bind="model.contact.contactNo">
                                     <i class="form-group__bar"></i>
                                     <div style="color:brown" show.bind="validation.contact.contactNo">Please enter a valid contactNo</div>
