* No mandatory on 2nd page of property details .. we will keep the page as it is but an option to skip filling in the details
* Tag line will be -
WE BUY YOUR PROPERTY IN 24 hours

--- a/public/src/app-header/app-header.html
+++ b/public/src/app-header/app-header.html
@@ -21,7 +21,7 @@
                             </div>
                             <div class="col-sm-9 col-xs-9">
                                 <img src="/img/logo.png" width="250" class="img-responsive">
-                                <span>A portal to sell your property quickly!</span>
+                                <span>We Buy Your Property In 24 hours!</span>
                             </div>
                         </div>
                     </div>
