--- a/public/src/app-footer/app-footer.html
+++ b/public/src/app-footer/app-footer.html
@@ -9,7 +9,7 @@
                             <div class="logo__text">
                                 <!-- <span>Realty</span> -->
                                  <img src="/img/logo.png" width="250" class="img-responsive">
-                                <span>A portal to sell your property quickly!</span>
+                                <span>We Buy Your Property In 24 hours!</span>
                             </div>
                         </a>
                         <div class="f-14 m-t-5">contact@cashforproperty.freshdesk.com</div>
